--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
       </div>
       <div class="row3">
         <div class="col3">
-          <a href="#"><div class="pico" id="roll4"> </div>  </a>           
-          <a href="#"><div class="desc">Sidecar</div></a>
+          <a href="cocktail_html/Sidecar.html"><div class="pico" id="roll4"> </div>  </a>           
+          <a href="cocktail_html/Sidecar.html"><div class="desc">Sidecar</div></a>
 
         </div>
         <div class="col3">
