--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav id="nav_menu">    
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="#contactl">Root Cocktail</a>
+        <li><a href="#contactl" id="root">Root Cocktail</a>
           <ul>
             <li><a href="cocktail_html/OldFashioned.html">Old-Fashioned</a>
               <ul>
@@ -51,7 +51,7 @@
             </li>
             <li><a href="cocktail_html/Sidecar.html">Sidecar</a>
               <ul>
-                <li><a href=cocktail_html/ClassicSidecar.html">Classic Sidecar</a></li>
+                <li><a href="cocktail_html/ClassicSidecar.html">Classic Sidecar</a></li>
                 <li><a href="cocktail_html/Margarita.html">Margarita</a></li>
                 <li><a href="cocktail_html/LastWord.html">Last Word</a></li>
                 <li><a href="cocktail_html/PaperPlane.html">Paper Plane</a></li>
@@ -128,8 +128,8 @@
 
           </ul>
         </li>
-        <li><a href="cocktail_html/About_Cocktails.html">About / Comment</a></li>
-         <li><a href="cocktail_html/CocktailList.html">Cocktail List</a></li>
+        <li><a href="cocktail_html/About_Cocktails.html" id="about">About / Comment</a></li>
+         <li><a href="cocktail_html/CocktailList.html" id="list">Cocktail List</a></li>
         
        
     </ul>
