--- a/cocktail_html/ChampagneCocktail.html
+++ b/cocktail_html/ChampagneCocktail.html
@@ -84,7 +84,7 @@
         </li>
         <li><input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
           <ul id="myMenu">
-            <li><a href="/cocktail_html/Bee'sKnees.html">Bee'sKnees</a></li>
+            <li><a href="../cocktail_html/Bee'sKnees.html">Bee'sKnees</a></li>
             <li><a href="/cocktail_html/BloodyMary.html">BloodyMary</a></li>
             <li><a href="/cocktail_html/Boulevardier.html">Boulevardier</a></li>
             <li><a href="/cocktail_html/BrownDerby.html">BrownDerby</a></li>
@@ -186,7 +186,7 @@
         &#xa9; 2021, Ethan Kline, Iowa City, IA
       </p>
     </footer>
-    <script src="/cocktail_js/cocktail.js"></script>
+    <script src="../cocktail_js/cocktail.js"></script>
 
 
 </body>
