--- a/cocktail_html/ChampagneCocktail.html
+++ b/cocktail_html/ChampagneCocktail.html
@@ -85,7 +85,7 @@
         <li><input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
           <ul id="myMenu">
             <li><a href="../cocktail_html/Bee'sKnees.html">Bee'sKnees</a></li>
-            <li><a href="/cocktail_html/BloodyMary.html">BloodyMary</a></li>
+            <li><a href="../cocktail_html/BloodyMary.html">BloodyMary</a></li>
             <li><a href="/cocktail_html/Boulevardier.html">Boulevardier</a></li>
             <li><a href="/cocktail_html/BrownDerby.html">BrownDerby</a></li>
             <li><a href="/cocktail_html/ChampagneCocktail.html">Champagne</a></li>
