--- a/cocktail_html/Mimosa.html
+++ b/cocktail_html/Mimosa.html
@@ -84,47 +84,47 @@
         </li>
         <li><input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
           <ul id="myMenu">
-            <li><a href="/cocktail_html/Bee'sKnees.html">Bee'sKnees</a></li>
-            <li><a href="/cocktail_html/BloodyMary.html">BloodyMary</a></li>
-            <li><a href="/cocktail_html/Boulevardier.html">Boulevardier</a></li>
-            <li><a href="/cocktail_html/BrownDerby.html">BrownDerby</a></li>
-            <li><a href="/cocktail_html/ChampagneCocktail.html">Champagne</a></li>
-            <li><a href="/cocktail_html/ClassicDaiquiri.html">ClassicDaiquiri</a></li>
-            <li><a href="/cocktail_html/ClassicFlip.html\">ClassicFlip</a></li>
-            <li><a href="/cocktail_html/ClassicMartini.html">ClassicMartini</a></li>
-            <li><a href="/cocktail_html/ClassicOldFashioned.html">ClassicOldFashioned</a></li>
-            <li><a href="cocktail_html/ClassicSidecar.html">ClassicSidecar</a></li>
-            <li><a href="/cocktail_html/ClassicWhiskyHighball.html">ClassicWhiskyHighball</a></li>
-            <li><a href="/cocktail_html/CorpseReviver.html">CorpseReviver</a></li>
-            <li><a href="/cocktail_html/Cosmopolitan.html">Cosmopolitan</a></li>
-            <li><a href="/cocktail_html/CubaLibre.html">CubaLibre</a></li>
-            <li><a href="/cocktail_html/Daiquiri.html">Daiquiri</a></li>
-            <li><a href="/cocktail_html/EggNog.html">EggNog</a></li>
-            <li><a href="/cocktail_html/Flip.html">Flip</a></li>
-            <li><a href="/cocktail_html/French75.html">French75</a></li>
-            <li><a href="/cocktail_html/GinAndTonic.html">GinAndTonic</a></li>
-            <li><a href="/cocktail_html/HemingwayDaiquiri.html">HemingwayDaiquiri</a></li>
-            <li><a href="/cocktail_html/Highball.html">Highball</a></li>
-            <li><a href="/cocktail_html/HotToddy.html">HotToddy</a></li>
-            <li><a href="/cocktail_html/IrishCoffee.html">IrishCoffee</a></li>
-            <li><a href="/cocktail_html/LastWord.html">LastWord</a></li>
-            <li><a href="/cocktail_html/Manhattan.html">Manhattan</a></li>
-            <li><a href="/cocktail_html/Margarita.html">Margarita</a></li>
-            <li><a href="/cocktail_html/Martinez.html">Martinez</a></li>
-            <li><a href="/cocktail_html/Martini.html">Martini</a></li>
-            <li><a href="/cocktail_html/Mimosa.html">Mimosa</a></li>
-            <li><a href="/cocktail_html/MintJulep.html">MintJulep</a></li>
-            <li><a href="/cocktail_html/Negroni.html">Negroni</a></li>
-            <li><a href="/cocktail_html/NewYorkFlip.html">NewYorkFlip</a></li>
-            <li><a href="/cocktail_html/OldFashioned.html">OldFashioned</a></li>
-            <li><a href="/cocktail_html/Paloma.html">Paloma</a></li>
-            <li><a href="/cocktail_html/PaperPlane.html">PaperPlane</a></li>
-            <li><a href="/cocktail_html/PinaColada.html">PinaColada</a></li>
-            <li><a href="/cocktail_html/PiscoSour.html">PiscoSour</a></li>
-            <li><a href="/cocktail_html/Sazerac.html">Sazerac</a></li>
-            <li><a href="/cocktail_html/Stinger.html">Stinger</a></li>
-            <li><a href="/cocktail_html/Vesper.html">Vesper</a></li>
-            <li><a href="/cocktail_html/WhiteRussian.html">WhiteRussian</a></li>
+            <li><a href="Bee'sKnees.html">Bee'sKnees</a></li>
+            <li><a href="BloodyMary.html">BloodyMary</a></li>
+            <li><a href="Boulevardier.html">Boulevardier</a></li>
+            <li><a href="BrownDerby.html">BrownDerby</a></li>
+            <li><a href="ChampagneCocktail.html">Champagne</a></li>
+            <li><a href="ClassicDaiquiri.html">ClassicDaiquiri</a></li>
+            <li><a href="ClassicFlip.html\">ClassicFlip</a></li>
+            <li><a href="ClassicMartini.html">ClassicMartini</a></li>
+            <li><a href="ClassicOldFashioned.html">ClassicOldFashioned</a></li>
+            <li><a href="ClassicSidecar.html">ClassicSidecar</a></li>
+            <li><a href="ClassicWhiskyHighball.html">ClassicWhiskyHighball</a></li>
+            <li><a href="CorpseReviver.html">CorpseReviver</a></li>
+            <li><a href="Cosmopolitan.html">Cosmopolitan</a></li>
+            <li><a href="CubaLibre.html">CubaLibre</a></li>
+            <li><a href="Daiquiri.html">Daiquiri</a></li>
+            <li><a href="EggNog.html">EggNog</a></li>
+            <li><a href="Flip.html">Flip</a></li>
+            <li><a href="French75.html">French75</a></li>
+            <li><a href="GinAndTonic.html">GinAndTonic</a></li>
+            <li><a href="HemingwayDaiquiri.html">HemingwayDaiquiri</a></li>
+            <li><a href="Highball.html">Highball</a></li>
+            <li><a href="HotToddy.html">HotToddy</a></li>
+            <li><a href="IrishCoffee.html">IrishCoffee</a></li>
+            <li><a href="LastWord.html">LastWord</a></li>
+            <li><a href="Manhattan.html">Manhattan</a></li>
+            <li><a href="Margarita.html">Margarita</a></li>
+            <li><a href="Martinez.html">Martinez</a></li>
+            <li><a href="Martini.html">Martini</a></li>
+            <li><a href="Mimosa.html">Mimosa</a></li>
+            <li><a href="MintJulep.html">MintJulep</a></li>
+            <li><a href="Negroni.html">Negroni</a></li>
+            <li><a href="NewYorkFlip.html">NewYorkFlip</a></li>
+            <li><a href="OldFashioned.html">OldFashioned</a></li>
+            <li><a href="Paloma.html">Paloma</a></li>
+            <li><a href="PaperPlane.html">PaperPlane</a></li>
+            <li><a href="PinaColada.html">PinaColada</a></li>
+            <li><a href="PiscoSour.html">PiscoSour</a></li>
+            <li><a href="Sazerac.html">Sazerac</a></li>
+            <li><a href="Stinger.html">Stinger</a></li>
+            <li><a href="Vesper.html">Vesper</a></li>
+            <li><a href="WhiteRussian.html">WhiteRussian</a></li>
             
 
           </ul>
@@ -184,7 +184,7 @@
         &#xa9; 2021, Ethan Kline, Iowa City, IA
       </p>
     </footer>
-    <script src="/cocktail_js/cocktail.js"></script>
+    <script src="../cocktail_js/cocktail.js"></script>
 
    
 </body>
