--- a/cocktail_html/UnderConstruction_Cocktails.html
+++ b/cocktail_html/UnderConstruction_Cocktails.html
@@ -89,7 +89,7 @@
             <li><a href="BrownDerby.html">BrownDerby</a></li>
             <li><a href="ChampagneCocktail.html">Champagne</a></li>
             <li><a href="ClassicDaiquiri.html">ClassicDaiquiri</a></li>
-            <li><a href="ClassicFlip.html\">ClassicFlip</a></li>
+            <li><a href="ClassicFlip.html">ClassicFlip</a></li>
             <li><a href="ClassicMartini.html">ClassicMartini</a></li>
             <li><a href="ClassicOldFashioned.html">ClassicOldFashioned</a></li>
             <li><a href="ClassicSidecar.html">ClassicSidecar</a></li>
