--- a/cocktail_html/GinAndTonic.html
+++ b/cocktail_html/GinAndTonic.html
@@ -18,7 +18,7 @@
   <nav id="nav_menu">    
     <ul>
         <li><a class="active" href="../index.html">Home</a></li>
-        <li><a href="#contactl">Root Cocktail</a>
+        <li><a href="#contactl" id="root">Root Cocktail</a>
           <ul>
             <li><a href="OldFashioned.html">Old-Fashioned</a>
               <ul>
@@ -128,8 +128,8 @@
 
           </ul>
         </li>
-        <li><a href="About_Cocktails.html">About / Comment</a></li>
-         <li><a href="CocktailList.html">Cocktail List</a></li>
+        <li><a href="About_Cocktails.html" id="about">About / Comment</a></li>
+         <li><a href="CocktailList.html" id="list">Cocktail List</a></li>
         
        
     </ul>
