--- a/cocktail_html/Daiquiri.html
+++ b/cocktail_html/Daiquiri.html
@@ -157,11 +157,11 @@
           </p>
       </div>
 
-      <figure>
+      <!-- <figure>
         <video id="videoplayer"  src="../cocktail_media/IMG_0998.MOV" controls autoplay
         width="480" height="270" poster="../cocktail_media/DryShakePoster.jpg"></video>
         <figcaption style="text-align: center;">Demonstrating the Dry Shake</figcaption>
-      </figure>
+      </figure> -->
 
       <div class="row3">
           <div class="col3">
