--- a/cocktail_html/CocktailList.html
+++ b/cocktail_html/CocktailList.html
@@ -7,6 +7,7 @@
     
     <title>KlineCocktailCompendium</title>
     <link rel="stylesheet" href="../cocktail_css/Cocktail.css">
+    <link rel="stylesheet" href="../cocktail_css/table.css">
     <link rel="shortcut icon" href="../cocktail_images/drink_bar_cocktails.ico">
     <meta name="description" content="test">
     <meta name="keywords" content="testing" >
