--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     
     <title>KlineCocktailCompendium</title>
     <link rel="stylesheet" href="cocktail_css/Cocktail.css">
+    <link rel="stylesheet" href="/cocktail_css/roll.css">
     <link rel="shortcut icon" href="cocktail_images/drink_bar_cocktails.ico">
     <meta name="description" content="test">
     <meta name="keywords" content="testing" >
 </head>
 <body>
-
-
   <nav id="nav_menu">    
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
@@ -190,8 +189,6 @@
         </div>
       </div>
     </div>
-
-
 
     <footer>
       <p>
