--- a/cocktail_html/About_Cocktails.html
+++ b/cocktail_html/About_Cocktails.html
@@ -142,8 +142,8 @@
     <div class="bun">
       <div class="row">Kline Cocktail Compendium: A Work of Love</div>
 
-      <div class="red">
-          <p id="short">
+
+          <p class="red">
             <img src="../cocktail_images/are_photo.jpg" alt="jole" >
 
             <b>The Kline Cocktail Compendium</b>  represents a collaboration between father
@@ -161,8 +161,7 @@
              Comments
             appreciated!
           </p>
-          
-      </div>
+
       <div class="blue">
       </div>
       <form action="chat_room.html" method="get"
