--- a/cocktail_html/Daiquiri.html
+++ b/cocktail_html/Daiquiri.html
@@ -142,8 +142,8 @@
     <div class="net">
       <div class="row">The Daiquiri</div>
 
-      <div class="row2">
-          <p id="short">
+     
+          <p class="row2">
            The Daiquiri family consists of cocktails containing a base spirit (classically rum), a citrus (classically lime juice) and a sweetener. 
            It brings to mind the beach, resort life, and a relaxed attitude. On the beach (or walking down Bourbon Street in New Orleans), 
            one might find adult slushies, with the elements above blenderized with ice.  The daiquiri can be much more sophisticated, as can be
@@ -155,7 +155,6 @@
             and is shaken again.  Pouring into a coupe glass will provide a cocktail with a creamy and inviting foam topper. 
             Below is a video demonstrating the dry shake process in creating a whiskey sour. 
           </p>
-      </div>
 
       <!-- <figure>
         <video id="videoplayer"  src="../cocktail_media/IMG_0998.MOV" controls autoplay
