--- a/cocktail_html/Flip.html
+++ b/cocktail_html/Flip.html
@@ -142,15 +142,15 @@
     <div class="net">
       <div class="row">Flip</div>
 
-      <div class="row2">
-          <p id="short">
+
+          <p class="row2">
            The Flip is an ancient drink, and variations on it were drunk as far back as the 1600's, in England. 
            In its original form, beer, rum, and sugar were heated; later versions called for 
            a red hot poker to be plunged into the drink causing it to froth or "flip." Modern versions are 
            generally served cold, and egg was added. For protein?     
           </p>
       
-      </div>
+
 
       <div class="row3">
           <div class="col3">
