--- a/cocktail_html/Highball.html
+++ b/cocktail_html/Highball.html
@@ -141,8 +141,8 @@
     <div class="net">
       <div class="row">The Highball</div>
 
-      <div class="row2">
-          <p id="short">
+
+          <p class="row2">
            The Highball is simple, but therefore requires attention to the details and qualities of the 
            ingredients.  At its most basic, it is a spirit and a mixer. The classic is whiskey and soda, 
            but recently the Vodka/soda has gained favor especially among carb-conscious imbibers. It is 
@@ -151,7 +151,7 @@
            boiler, or the track ahead is open and clear.       
           </p>
       
-      </div>
+
 
       <div class="row3">
           <div class="col3">
