--- a/cocktail_html/Martini.html
+++ b/cocktail_html/Martini.html
@@ -142,8 +142,8 @@
     <div class="net">
       <div class="row">The Martini</div>
 
-      <div class="row2">
-          <p id="short">
+
+          <p class="row2">
           The martini is a drink with a lot of baggage.  James Bond erroneously orders it shaken, not stirred; shaking this spirit-forward concoction "bruises" 
           the liquor and over-dilutes the drink.  Classic martinis may be made with either vodka or gin as the spirit base, or both, as in the case of the 
           Bond-inspired Vesper; the drink is reduced in ferocity by the addition of dry vermouth, the amount of which depends on the taste of the imbiber. 
@@ -152,8 +152,7 @@
           are not martinis, if indeed they deserve the name of cocktail! 
   
           </p>
-      
-      </div>
+
 
       <div class="row3">
           <div class="col3">
