--- a/cocktail_html/OldFashioned.html
+++ b/cocktail_html/OldFashioned.html
@@ -141,8 +141,8 @@
     <div class="net">
       <div class="row">The Old Fashioned</div>
 
-      <div class="row2">
-          <p id="short">
+    
+          <p class="row2">
            The Old-Fashioned cocktail is at its heart a core spirit (traditionally whiskey),
            a sweetener (typically sugar-based, but can alternately be fruit-oriented), and a 
            bittering agent.  There are many Old-Fashioned variants.  It traditionally has been 
@@ -157,8 +157,6 @@
            are often flavored with an infusion of herbs, fruits, or other seasonings.       
           </p>
       
-      </div>
-
       <div class="row3">
           <div class="col3">
             <a href="ClassicOldFashioned.html"><div class="pico"><img src="../cocktail_images/classicOldFashioned.jpg" alt=""></div> </a>            
