--- a/cocktail_html/UnderConstruction_Cocktails.html
+++ b/cocktail_html/UnderConstruction_Cocktails.html
@@ -141,8 +141,8 @@
     <div class="bun">
       <div class="row">Under Construction!!!</div>
 
-      <div class="red">
-          <p id="short">
+  
+          <p class="red">
             <b></b>  
             <br> 
             <b>Sorry!</b>  
@@ -152,7 +152,7 @@
             Please stop back later!!!
           </p>
       
-      </div>
+
       <div class="blue">
           <img src="../cocktail_images/UnderConstruction.png" alt="jole" >
       </div>
