--- a/cocktail_html/Sidecar.html
+++ b/cocktail_html/Sidecar.html
@@ -142,14 +142,14 @@
     <div class="net">
       <div class="row">The Sidecar</div>
 
-      <div class="row2">
-          <p id="short">
+
+          <p class="row2">
            The Sidecar, like the Daiquiri group, is based on the sour. It contains a base spirit, at 
            least one liqueur, citrus, and a sweetener. These drinks are typically more complex in 
            flavor than the Daiquiris due to the second (or third) alcoholic component.  
           </p>
       
-      </div>
+
 
       <div class="row3">
           <div class="col3">
