--- a/cocktail_html/ClassicOldFashioned.html
+++ b/cocktail_html/ClassicOldFashioned.html
@@ -146,7 +146,7 @@
       <div class="row">The Classic Old-Fashioned  <button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Classic Old Fashioned is a balance between the sharpness of the 
             alcohol, the sweetness of sugar, and a dash of bitters to make it 
