--- a/cocktail_html/MintJulep.html
+++ b/cocktail_html/MintJulep.html
@@ -141,7 +141,7 @@
     <div class="bun">
       <div class="row">The Mint Julep<button onclick="window.print()">Print</button></div>
 
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Mint Julep is the sweet southern cousin of the Old-Fashioned family. Long 
             associated with the Kentucky Derby, (all true bourbon is made in Bourbon County, 
