--- a/cocktail_html/Sazerac.html
+++ b/cocktail_html/Sazerac.html
@@ -142,7 +142,7 @@
     <div class="bun">
       <div class="row">The Sazerac<button onclick="window.print()">Print</button></div>
 
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Sazerac is a classic New Orleans libation; some say it is America's oldest cocktail. 
             Legend has it that it was invented by Antoine Amedie Peychaud, a pharmacist, whose 
