--- a/cocktail_html/Bee'sKnees.html
+++ b/cocktail_html/Bee'sKnees.html
@@ -142,7 +142,7 @@
       <div class="row">The Bee's Knees<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Bee's Knees uses lemon juice as a souring agent. Lemon juice is less sharp a flavor 
             than lime juice, which would overwhelm the honey. Different honeys will give different flavor profiles. <br><br>
