--- a/cocktail_html/BloodyMary.html
+++ b/cocktail_html/BloodyMary.html
@@ -142,7 +142,7 @@
       <div class="row">Bloody Mary<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
           Mary I, daughter of Henry VIII, took the throne in 1553 and was the first 
          ruling queen of England and Ireland. She was a devout Catholic, and in reaction 
