--- a/cocktail_html/Boulevardier.html
+++ b/cocktail_html/Boulevardier.html
@@ -146,7 +146,7 @@
     <div class="row">The Boulevardier<button onclick="window.print()">Print</button></div>
 
 
-    <div class="red">
+    <div class="box">
       <p class="blurb">
         The Boulevardier is closely related to the Negroni, but with bourbon in place of gin. It was first
         descdribed in a 1927 bar guide, Barflies and Cocktails, and was named after a magazine of the same name.
