--- a/cocktail_html/ChampagneCocktail.html
+++ b/cocktail_html/ChampagneCocktail.html
@@ -144,7 +144,7 @@
       <div class="row">The Champagne Cocktail<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Champagne Cocktail is an elegant libation for elegant people who are in the mood for 
             a less spirit-forward beverage.  It does not require vintage bubbly, but the sparkling wine used 
