--- a/cocktail_html/ClassicDaiquiri.html
+++ b/cocktail_html/ClassicDaiquiri.html
@@ -142,7 +142,7 @@
       <div class="row">The Classic Daiquiri<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The classic Daiquiri contains rum, lime juice, and simple syrup.  It is a deceptively 
             straightforward cocktail whose proportions can be adjusted to make it more sour or sweet. 
