--- a/cocktail_html/ClassicFlip.html
+++ b/cocktail_html/ClassicFlip.html
@@ -144,7 +144,7 @@
       <div class="row">Classic Flip<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Classic Flip is rich and not too alcoholic, with its base being fortified 
             wine such as cream or oloroso sherry. Feel free to try with other bases such as 
