--- a/cocktail_html/CubaLibre.html
+++ b/cocktail_html/CubaLibre.html
@@ -143,7 +143,7 @@
       <div class="row">Cuba Libre<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Cuba Libre is simple yet delicious.  Possible, but not as good with 
             Diet Coke.  Pepsi? Just stay home! If you can, try it with Cuban rum! 
