--- a/cocktail_html/EggNog.html
+++ b/cocktail_html/EggNog.html
@@ -142,7 +142,7 @@
       <div class="row">Egg Nog<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The eggnog experience of most people derives from carboard containers in 
             the dairy section, usually found during the winter holiday season.  Those 
