--- a/cocktail_html/GinAndTonic.html
+++ b/cocktail_html/GinAndTonic.html
@@ -142,7 +142,7 @@
       <div class="row">Gin and Tonic<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The gin and tonic is an old British Empire drink; the colonialists learned that 
             quinine, extracted from the bitter bark of the cinchona trees, was effective in combatting 
