--- a/cocktail_html/HotToddy.html
+++ b/cocktail_html/HotToddy.html
@@ -142,7 +142,7 @@
     <div class="bun">
       <div class="row">The Hot Toddy<button onclick="window.print()">Print</button></div>
 
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Hot Toddy is just the thing to warm you up on a chilly winter evening.  it is basically
             a warm Old-Fashioned.   <br><br>
