--- a/cocktail_html/LastWord.html
+++ b/cocktail_html/LastWord.html
@@ -141,7 +141,7 @@
       <div class="row">The Last Word<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Last Word is an incredibly complex version of the sidecar with two strongly flavored 
             liqueurs (Chartreuse and Luxardo) melding in an herbacious and tasty blend. Be warned: 
