--- a/cocktail_html/Manhattan.html
+++ b/cocktail_html/Manhattan.html
@@ -142,7 +142,7 @@
       <div class="row">The Manhattan<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             Each of New York City's borough's has a cocktail named in its honor; of the five, 
             the Manhattan is far and away the most well known.  And for good reason.  Using high quality
