--- a/cocktail_html/Martinez.html
+++ b/cocktail_html/Martinez.html
@@ -142,7 +142,7 @@
       <div class="row">The Martinez<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Martinez is basically a martini made with sweet rather than dry vermouth.  It is a smooth and slightly sweeter alternative 
             for someone who is learning to love gin. <br><br>
