--- a/cocktail_html/Mimosa.html
+++ b/cocktail_html/Mimosa.html
@@ -143,7 +143,7 @@
       <div class="row">Mimosa<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Mimosa is a classic brunch beverage.  Its simplicity means that the flavor 
             depends on the ingredients, thus a sweeter or dryer sparkling wine and fresh 
