--- a/cocktail_html/PaperPlane.html
+++ b/cocktail_html/PaperPlane.html
@@ -143,7 +143,7 @@
       <div class="row">The Paper Plane<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Paper Plane reminds me of pre-flight cocktails in the Polaris Lounge. Feel free 
             to experiment with other amari, italian bitter-sweet liqueurs. If you substitute Camapri 
