--- a/cocktail_html/Vesper.html
+++ b/cocktail_html/Vesper.html
@@ -142,7 +142,7 @@
       <div class="row">The Vesper<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Vesper is a James-Bond inspired beverage. From Ian Fleming's Casino 
             Royale: 'Three measures of Gordon's, one of vodka, half a measure of Kina Lillet. Shake it very well until it's ice-cold, 
