--- a/cocktail_html/WhiteRussian.html
+++ b/cocktail_html/WhiteRussian.html
@@ -143,7 +143,7 @@
       <div class="row">Egg Nog<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The White Russian is a starter drink for many, as it is sweetish and 
             relatively low proof. In this recipe, using half-and-half instead of 
