--- a/cocktail_html/BrownDerby.html
+++ b/cocktail_html/BrownDerby.html
@@ -143,7 +143,7 @@
       <div class="row">The Brown Derby<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Brown Derby was created in 1930, and it's named after a classic diner that was shaped
             like a hat. It tastes lighter than most whiskey cocktails, with the grapefruit juice , lemon 
