--- a/cocktail_html/ClassicMartini.html
+++ b/cocktail_html/ClassicMartini.html
@@ -146,7 +146,7 @@
       <div class="row">The Classic Martini<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Classic Martini is the very essence of a spirit-forward adult beverage. This recipie 
             may be viewed as a template that can be changed with the type/brand of liquor, the type/amount 
