--- a/cocktail_html/ClassicSidecar.html
+++ b/cocktail_html/ClassicSidecar.html
@@ -144,7 +144,7 @@
       <div class="row">The Classic Sidecar<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The classic Sidecar is made with cognac, curacao liqueur, and lemon juice. Feel free to 
             substitute: brandy for cognac, triple sec for curacao.  Please use only  fresh lemon juice! Imagine the 
