--- a/cocktail_html/ClassicWhiskyHighball.html
+++ b/cocktail_html/ClassicWhiskyHighball.html
@@ -144,7 +144,7 @@
       <div class="row">Classic Whisky Highball<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Classic Whisky Highball. Your father's drink. Scotch and soda. Why whisky and not whiskey? Because 
             that's how you spell scotch. Always serve in a tall glass! <br><br>
