--- a/cocktail_html/CorpseReviver.html
+++ b/cocktail_html/CorpseReviver.html
@@ -143,7 +143,7 @@
       <div class="row">The Corpse Reviver #2<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Corpse Reviver is a family of cocktails traditionally consumed as a hair-of-the-dog, a hangover 
             reliever to refresh and enliven after a night of heavy drinking. They tend to be relatively 
