--- a/cocktail_html/Cosmopolitan.html
+++ b/cocktail_html/Cosmopolitan.html
@@ -143,7 +143,7 @@
       <div class="row">The Cosmopolitan<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             Although putatively created in 1975 in Minneapolis, the Cosmo is forever a Manhattan 
             drink due to its association with Sex and the City. There, it represented freedom, whimsy, 
