--- a/cocktail_html/French75.html
+++ b/cocktail_html/French75.html
@@ -143,7 +143,7 @@
       <div class="row">The French 75<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The French 75 is named for a cannon, used by the French during 
             World War One, that was known for its accuracy and speed. This cocktail was said to have such a kick 
