--- a/cocktail_html/HemingwayDaiquiri.html
+++ b/cocktail_html/HemingwayDaiquiri.html
@@ -143,7 +143,7 @@
       <div class="row">The Hemingway Daiquiri<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             Papa Hemingway liked hanging out in Cuba. He fished, he drank, he daillied, and he wrote.
              <a href="https://en.wikipedia.org/wiki/Floridita">El Floridita</a> bar in Havana was his favorite tippling spot, and there is a bronze statue 
