--- a/cocktail_html/IrishCoffee.html
+++ b/cocktail_html/IrishCoffee.html
@@ -143,7 +143,7 @@
       <div class="row">Irish Coffee<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             Irish Coffee is one of the after-dinner libations that prefigure Red Bull cocktails; 
             caffeine + alcohol. It is decadent and warming. If you must, use canned whipped cream, 
