--- a/cocktail_html/Margarita.html
+++ b/cocktail_html/Margarita.html
@@ -143,7 +143,7 @@
       <div class="row">The Margarita<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Margarita is the most well known tequila-based cocktail; many people have only 
             tried the slushy frozen variety, available in any chain Mexican restaurant.  Served 
