--- a/cocktail_html/Negroni.html
+++ b/cocktail_html/Negroni.html
@@ -143,7 +143,7 @@
       <div class="row">The Negroni<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Negroni is a grown-up drink. It brings to mind sitting in an Italian cafe, under 
             a large umbrella, sipping a drink while watching the sun set over the Mediterranean Sea. 
