--- a/cocktail_html/NewYorkFlip.html
+++ b/cocktail_html/NewYorkFlip.html
@@ -143,7 +143,7 @@
       <div class="row">New York Flip<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The New York Flip is related to the New York Sour, driven by bourbon and port; 
             instead of lemon juice, the flip adds heavy cream.<br><br>
