--- a/cocktail_html/Paloma.html
+++ b/cocktail_html/Paloma.html
@@ -143,7 +143,7 @@
       <div class="row">Paloma<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Paloma is less well known than the Margarita, but arguably a better drink! 
             It can be made with mezcal in place of tequila which provides a smoky kick.  At 
