--- a/cocktail_html/PinaColada.html
+++ b/cocktail_html/PinaColada.html
@@ -143,7 +143,7 @@
       <div class="row">Pina Colada<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Pina Colada is the beach version of the Flip. Also related to a Sour, the 
             coconut cream brings it into the Flip family. Ideally served with a straw and 
