--- a/cocktail_html/PiscoSour.html
+++ b/cocktail_html/PiscoSour.html
@@ -143,7 +143,7 @@
       <div class="row">Pisco Sour<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             Pisco, the Peruvian national spirit, is a brandy (or aguardiente) distilled from fermented grapes. 
             Its name derives from the port town of the Pisco, from where the brandy was exported to Europe. The 
