--- a/cocktail_html/Stinger.html
+++ b/cocktail_html/Stinger.html
@@ -143,7 +143,7 @@
       <div class="row">The Stinger<button onclick="window.print()">Print</button></div>
 
       
-      <div class="red">
+      <div class="box">
           <p class="blurb">
             The Stinger is an old drink. Your grandmother may have sipped it in the 30's.  It can either be served 
             up or on crushed ice, much like a mint julep. <br><br>
@@ -176,6 +176,7 @@
       <div class="blue">
           <img src="../cocktail_images/stinger.jpg" alt="jole" >
       </div>
+      
       <footer>
         <p>
           &#xa9; 2021, Ethan Kline, Iowa City, IA
