--- a/cocktail_html/Daiquiri.html
+++ b/cocktail_html/Daiquiri.html
@@ -80,6 +80,9 @@
                 <li><a href="PinaColada.html">Pina Colada</a></li>
               </ul>
             </li>
+            <li>
+              <a href="Flip.html">More Drinks</a>
+            </li>
           </ul>
         </li>
         <li><input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
