--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>KlineCocktailCompendium</title>
   <link rel="stylesheet" href="cocktail_css/Cocktail.css">
-  <link rel="stylesheet" href="/cocktail_css/roll.css">
+  <link rel="stylesheet" href="cocktail_css/roll.css">
   <link rel="shortcut icon" href="cocktail_images/drink_bar_cocktails.ico">
   <meta name="description" content="test">
   <meta name="keywords" content="testing">
