--- a/cocktail_html/PaperPlane.html
+++ b/cocktail_html/PaperPlane.html
@@ -137,7 +137,7 @@
       
       </div>
       <div class="blue">
-          <img src="../cocktail_images/last_word.jpg" alt="A photograph of the Last Word cocktail" >
+          <img src="../cocktail_images/paper_plane.jpg" alt="A photograph of the paper_plane cocktail" >
       </div>
 
     
